# Pilk-Engine

./: .gitignore  CMakeLists.txt  Pilk-Engine-VS-Port.sln  README.txt
Pilk-Engine-VS-Port/: BadEndingScene.cpp  Camera.cpp  Camera.h  CollisionManager.cpp  CollisionManager.h  Component.h  Entity.h  EntityManager.cpp  EntityManager.h  FileManager.cpp  FileManager.h  GameCollisionManager.cpp  GameplayScene.cpp  Geometry.cpp  Geometry.h  GoodEndingScene.cpp  MainMenuScene.cpp  Model.cpp  Model.h  PeterTestScene.cpp  Pilk-Engine-VS-Port.vcxproj  Pilk-Engine-VS-Port.vcxproj.filters  PilkEngineCommon.h  PrefabManager.cpp  PrefabManager.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneTypes.h  System.h  SystemManager.cpp  SystemManager.h  Timer.h  glad.cpp  imgui.ini  main.cpp
Pilk-Engine-VS-Port/include/glad/: glad.h
Pilk-Engine-VS-Port/include/imgui/: imconfig.h  imgui_impl_opengl3.h
Pilk-Engine-VS-Port/lib/assimp/: assimp.lib
Pilk-Engine-VS-Port/resources/models/badending/: endScreen.mtl
Pilk-Engine-VS-Port/resources/models/bat/: bat_04.mtl
Pilk-Engine-VS-Port/resources/models/block/: 6x12Cube.mtl
Pilk-Engine-VS-Port/resources/models/fire/: noise.tga
Pilk-Engine-VS-Port/resources/models/gem/: Gem.mtl
Pilk-Engine-VS-Port/resources/models/heart/: heart.mtl
Pilk-Engine-VS-Port/resources/models/player2/: endScreen.mtl
Pilk-Engine-VS-Port/resources/models/snake/: snake_02.mtl
Pilk-Engine-VS-Port/resources/models/tempcube/: tempcube.mtl
Pilk-Engine-VS-Port/resources/models/torch/: fire01.mtl  fire02.mtl  handle.mtl
Pilk-Engine-VS-Port/resources/prefabs/Level1/: testprefab.txt  testprefab2.txt  testprefab3.txt  testprefab4.txt  testprefab5.txt  testprefab6.txt  testprefab7.txt  testprefab8.txt  testprefab9.txt  testprefab9999.txt
Pilk-Engine-VS-Port/resources/scripts/: EntityScript.txt
Pilk-Engine-VS-Port/resources/shaders/: Billboard.vert  FireShader.frag  FragmentShader.frag  LightingShader.frag  LightingShader.vert  VertexShader.vert  Wall.frag  Wall.vert
libs/assimp/contrib/zlib/: ALL_BUILD.vcxproj  cmake_install.cmake  zlibstatic.vcxproj.filters
resources/shaders/: FragmentShader.frag  VertexShader.vert
run/: imgui.ini
run/resources/models/bat/: bat_01.mtl  bat_03.mtl
run/resources/models/block/: 1x1Cube.mtl  6x1Cube.mtl
run/resources/models/bullet/: bullet_Medium.mtl
run/resources/models/fire/: fire.blend  fire.blend1  fire.mtl
run/resources/models/goodending/: endScreen.mtl
run/resources/models/player1/: player01.mtl
run/resources/models/randy/: randy.mtl
run/resources/models/snake/: snake_03.mtl  snake_04.mtl
run/resources/models/titlescreen/: titleScreen.mtl
run/resources/scripts/: JSONEntityScript.json.txt
run/resources/shaders/: FragmentShader.frag
src/: main.cpp
src/Engine/: PilkEngineCommon.h
src/Engine/Components/: Component.cpp  Component.h  ComponentTypes.h
src/Engine/Managers/: CollisionManager.cpp  CollisionManager.h  ComponentManager.h  EntityManager.cpp  EntityManager.h  FileManager.cpp  FileManager.h  GameCollisionManager.cpp  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  SystemManager.cpp  SystemManager.h
src/Engine/Objects/: Entity.cpp  Entity.h  Geometry.cpp  Geometry.h  Model.cpp  Model.h
src/Engine/Scenes/: MainMenuScene.cpp  PeterTestScene.cpp  Scene.cpp  Scene.h  SceneTypes.h
src/Engine/Systems/: System.cpp  System.h
src/Engine/Utility/: Camera.cpp  Camera.h
src/Managers/: SceneManager.cpp  SceneManager.h
src/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
(+28 files in other folders)
