cmake_minimum_required(VERSION 3.0.0)
project(Pilk-Engine VERSION 0.1.0)
#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")

link_directories(libs/glfw)

include_directories(libs/glad)
include_directories(libs/KHR)
include_directories(libs/imgui)
include_directories(libs/glfw)
include_directories(libs/stb)
include_directories(libs/irrKlang)
include_directories(libs/glm)
include_directories(include)

file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
add_executable(Pilk-Engine ${SOURCES} "src/stb/stb_image.cpp" "src/Engine/Managers/SceneManager.cpp" "src/Engine/Managers/SceneManager.h"  "src/Engine/Scenes/Scene.h" "src/Engine/Scenes/MainMenuScene.cpp" "src/Engine/Scenes/Scene.cpp" "src/Engine/Scenes/SceneTypes.h" "src/Engine/Objects/Entity.h" "src/Engine/Objects/Entity.cpp" "src/Engine/Systems/System.h" "src/Engine/Systems/System.cpp" "src/Engine/Components/Component.h" "src/Engine/Components/Component.cpp" "src/Engine/Components/ComponentTypes.h" "src/Engine/Managers/ResourceManager.cpp" "src/Engine/Managers/ResourceManager.h")

find_package(OpenGL REQUIRED)
target_link_libraries(Pilk-Engine PRIVATE ${OPENGL_gl_LIBRARY})
target_link_libraries(Pilk-Engine PRIVATE glfw3)

file(COPY resources DESTINATION /)

add_custom_command(TARGET Pilk-Engine POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory
        "${PROJECT_SOURCE_DIR}/resources"
        $<TARGET_FILE_DIR:Pilk-Engine>)